<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".WalkGamesActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/fm"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:id="@+id/massage"
            android:textSize="20sp"
            android:textColor="@color/dark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failure"
            android:id="@+id/result"
            android:textSize="16sp"
            android:textColor="@color/dark"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:id="@+id/backbtn"
            android:background="@color/button_primary"
            android:textColor="@color/button_text"
            android:layout_margin="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/howtoans"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waytosolve"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/dark"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:id="@+id/okbtn"
            android:background="@color/button_primary"
            android:textColor="@color/button_text"
            android:layout_margin="20dp"/>
    </LinearLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/progressbar"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:gravity="bottom"
        android:padding="20dp"
        android:textColor="@color/dark"/>
    <TextView
        android:id="@+id/tv_times"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:gravity="top"
        android:padding="20dp"
        android:textColor="@color/dark"/>
    <TextView
        android:id="@+id/howtosolve"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:gravity="bottom"
        android:textColor="@color/dark"
        android:text="@string/walk_method1"/>
</LinearLayout>