<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_ask"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textAlignment="center"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Use Current User"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:id="@+id/radio_current"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Use Previous User"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:id="@+id/radio_prev"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create New User"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:id="@+id/radio_new"
                android:checked="true"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_new">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:hint="USER NAME"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:hint="AGE"
            android:id="@+id/user_age"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MALE"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:id="@+id/radio_male"
                android:checked="true"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FEMALE"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:id="@+id/radio_female"/>
        </RadioGroup>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_condition"
            android:id="@+id/ch_terms"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_prev"
        android:layout_marginTop="10dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:text="Please select a user"/>
        <Spinner
            android:id="@+id/spinner_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/choose_user"
            android:layout_marginHorizontal="30dp"
            />
    </LinearLayout>
    <!--<CheckBox-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/select_above"-->
        <!--android:id="@+id/ch_select"/>-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="CONFIRM"
        android:background="@color/button_primary"
        android:textColor="@color/button_text"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:id="@+id/btn_confirm"
        android:layout_marginTop="20dp"/>
</LinearLayout>